Cup view created Match generation

--- a/src/main/resources/templates/favourites.html
+++ b/src/main/resources/templates/favourites.html
@@ -52,6 +52,10 @@
                     width: 784,
                     title: 'Teams',
                     store: favourites.teams,
+                    layout: {
+                        type: 'vbox',
+                        padding: 5
+                    },
 
                     columns: [  {
                         text: 'Name',
