--- a/src/main/resources/templates/new_team.html
+++ b/src/main/resources/templates/new_team.html
@@ -19,8 +19,7 @@
                 height: 350,
                 autoHeight: true,
                 layout: {
-                    type: 'vbox',
-                    align: 'stretch'
+                    type: 'vbox'
                 },
                 items: [{
                     xtype: 'textfield',
