--- a/src/main/resources/templates/new_competition.html
+++ b/src/main/resources/templates/new_competition.html
@@ -140,6 +140,13 @@
 
             compType.setValue("League");
 
+            var homeButton = Ext.create('Ext.button.Button', {
+                text: 'Home',
+                handler: function () {
+                    window.location.assign("/home");
+                }
+            });
+
             Ext.create('Ext.panel.Panel', {
                 renderTo: Ext.getBody(),
                 width: 1000,
@@ -154,6 +161,7 @@
                     grid
                 ],
                 buttons: [
+                    homeButton,
                     addButton,
                     removeButton,
                     createButton
