--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,7 +21,7 @@
             var cancelButton = Ext.create('Ext.button.Button', {
                 text: 'Cancel',
                 handler: function() {
-
+                    window.location.assign("/home");
                 }
             });
             var submitButton = Ext.create('Ext.button.Button', {
