--- a/src/main/resources/templates/competitions.html
+++ b/src/main/resources/templates/competitions.html
@@ -77,6 +77,13 @@
                 }
             });
 
+            var homeButton = Ext.create('Ext.button.Button', {
+               text: 'Home',
+               handler: function () {
+                   window.location.assign("/home");
+               }
+            });
+
             Ext.create('Ext.panel.Panel', {
                 renderTo: Ext.getBody(),
                 width: 1000,
@@ -90,6 +97,9 @@
                     searchField,
                     searchButton,
                     grid
+                ],
+                buttons: [
+                    homeButton
                 ]
             });
 
