--- a/src/main/resources/templates/league.html
+++ b/src/main/resources/templates/league.html
@@ -177,6 +177,42 @@
                         agoals: league.matches[j].awayGoals, ateam: league.matches[j].awayTeam.name});
                 }
 
+                var homeButton = Ext.create('Ext.button.Button', {
+                    text: 'Home',
+                    handler: function () {
+                        window.location.assign("/home");
+                    }
+                });
+
+                var favButton = Ext.create('Ext.button.Button', {
+                    text: 'Add to Favourites',
+                    handler: function () {
+                        Ext.Ajax.request({
+                            url: '/competition/addToFavourite/' + league.compId,
+                            method: 'POST',
+                            success: function (form, action) {
+                            },
+                            failure: function (form, action) {
+                                alert(form.responseText);
+                            }
+                        });
+                    }
+                });
+
+                Ext.Ajax.request({
+                    url: '/user/isLoggedIn',
+                    method: 'GET',
+                    success: function (form, action) {
+                        var loggedIn = Ext.JSON.decode(form.responseText);
+                        if(!loggedIn){
+                            favButton.hide();
+                        }
+                    },
+                    failure: function (form, action) {
+                        alert(form.responseText);
+                    }
+                });
+
                 Ext.create('Ext.panel.Panel', {
                     renderTo: Ext.getBody(),
                     width: 1000,
@@ -190,8 +226,12 @@
                         compNameLabel,
                         grid,
                         matchGrid
+                    ],
+                    buttons: [
+                        favButton,
+                        homeButton
                     ]
-                });//.center();
+                });
             } catch(e){
                 alert("Invalid team id")
             }
