--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/theme-neptune.js"></script>
     <script type="text/javascript">
         Ext.onReady(function () {
+            var homeButton = Ext.create('Ext.button.Button', {
+                text: 'Home',
+                handler: function () {
+                    window.location.assign("/home");
+                }
+            });
+
             var loginpanel = Ext.create('Ext.form.Panel', {
                 region: 'center',
                 title: 'Login',
@@ -46,7 +53,8 @@
                     {
                         text: "Reset",
                         handler: function() { this.up('form').getForm().reset(); }
-                    }
+                    },
+                    homeButton
                 ]
             });
             Ext.create('Ext.panel.Panel', {
