--- a/src/main/resources/templates/teams.html
+++ b/src/main/resources/templates/teams.html
@@ -70,6 +70,13 @@
                 }
             });
 
+            var homeButton = Ext.create('Ext.button.Button', {
+                text: 'Home',
+                handler: function () {
+                    window.location.assign("/home");
+                }
+            });
+
             Ext.create('Ext.panel.Panel', {
                 renderTo: Ext.getBody(),
                 width: 1000,
@@ -83,6 +90,9 @@
                     searchField,
                     searchButton,
                     grid
+                ],
+                buttons: [
+                    homeButton
                 ]
             });
 
